--- a/src/app/views/request-voucher/request-voucher.component.html
+++ b/src/app/views/request-voucher/request-voucher.component.html
@@ -8,7 +8,7 @@
     <form [formGroup]="voucherForm" (ngSubmit)="createRequest(voucherForm.value)">
         <div class="modal-body">
             <div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="storeCode">Store Code</label>
                     <select class="form-control" formControlName="storeCode">
                         <option [ngValue]="null"></option>
@@ -28,7 +28,7 @@
                         *ngIf="(voucherForm.get('storeBranch').invalid && voucherForm.get('storeBranch').dirty)">
                         Enter store branch
                     </small>
-                </div>
+                </div> -->
                 <div class="form-group">
                     <label for="amount">Amount</label>
                     <input currencyMask
