refactor: removed firestore code

--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -167,4 +167,4 @@
           </ngu-tile>
           <button NguCarouselNext class="rightRs">></button>
           <button NguCarouselPrev class="leftRs">
-            <</button> </ngu-carousel> </div> </div> </div> </div>
+          </button> </ngu-carousel> </div> </div> </div> </div>
