9	Buyer - Beneficiary age must not have age limit ( oks na ) 10	Unable to create voucher (d ko mareplicate sken . gumagana sya sken) 11	Registered date is always today's date (dba tama naman ung ganitong logic ? ) 12	Unable to register new seller (oks na) 13	Quitg option is not working ( Wala pang API na nag dedelete nung user ) 14	Account Setting - Image are not saved - need to refresh before the image gets updated ( gumagana sya sken kht hindi irefresh nag papalit agad image) 15	Account Setting - Beneficiaries - Save button is not disabled even if there are errors ( d ko mareplicate ) 16	"Account Setting - User Information - Date of Birth can be accepted below 18yrsold. Save it to other tab (Gov Document Bank Info)" - ( d ko rn mareplicate ) 17	Home - Email address is displayed instead of Full Name ( d ko maintindhan tong issue na to ) 18	Account Setting name - Changes are not reflected after saving - need to refresh before the changes take place ( oks na ) 19	Reports 20	Store code is not available in Voucher (binalik ko nlng ung mga stores sa voucher. pati ung create store nasa voucher na tab sya pag nag request )

--- a/src/app/views/account-settings/account-settings.component.html
+++ b/src/app/views/account-settings/account-settings.component.html
@@ -190,8 +190,8 @@
                                             <input type="date" class="form-control form-control-sm" placeholder=""
                                                 formControlName="birthday">
                                             <small class="text-danger font-weight-bold ml-1"
-                                                *ngIf="((beneficiariesForm.controls.birthday.value == null || beneficiariesForm.controls.birthday.value == '' || beneficiariesForm.controls.birthday.errors?.ageInvalid) && beneficiariesForm.get('birthday').dirty)">
-                                                Enter your birth date. Must be 18 years old above.
+                                                *ngIf="((beneficiariesForm.controls.birthday.value == null || beneficiariesForm.controls.birthday.value == '') && beneficiariesForm.get('birthday').dirty)">
+                                                Please provide birthdate.
                                             </small>
                                         </div>
                                         <div class="form-group col-md-6 col-sm-12">
