--- a/src/app/views/account-settings/account-settings.component.html
+++ b/src/app/views/account-settings/account-settings.component.html
@@ -8,7 +8,7 @@
                 </div>
                 <div class="card-body">
                     <h3 class="card-title mb-4">
-                        {{(profile?.memberProfile?.firstName ? profile?.memberProfile?.firstName : '')  + ' ' + (profile?.memberProfile?.lastName ? profile?.memberProfile?.lastName : '')}}
+                        {{(userFirstName)  + ' ' + (userLastName)}}
                     </h3>
                 </div>
             </div>
